--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,10 +10,11 @@
   </head>
 
   <body>
-
+    <a href="/drones">lista</a>
     {{{body}}}
 
     <script src="/js/script.js"></script>
+
   </body>
 
 </html>
