--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,7 @@
 <h2>Available drones</h2>
+{{#each drone}}
+<h5 class="card-title"> Name : {{name}}</h5>
+<p class="card-text"> Propellers :{{propellers}}</p>
+<p class="card-text"> Max Speed :{{maxSpeed}}</p>
+
+{{/each}}
