--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,13 @@
 <h2>Update the drone</h2>
+<form action="/drones/{{this._id}}/edit" method="post">
+  <label> Name:
+    <input type="text" name="name" />
+  </label>
+  <label> Propellers:
+    <input type="text" name="propellers" />
+  </label>
+  <label> Max speed:
+    <input type="text" name="maxSpeed" />
+  </label>
+  <button type="submit"> Update </button>
+</form>
